# Nexus

./: .gitignore  .hintrc  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css  jcampconverter.d.ts  main.tsx  react-force-graph-2d.d.ts  smiles-drawer.d.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: download-pdfium.sh
src-tauri/src/: ai.rs  chem_api.rs  commands.rs  compiler.rs  db.rs  error.rs  kinetics.rs  lib.rs  main.rs  models.rs  symmetry.rs  watcher.rs
src-tauri/src/ai/: chat.rs  embedding.rs  mod.rs  similarity.rs  vector_cache.rs
src-tauri/src/commands/: cmd_ai.rs  cmd_chem.rs  cmd_compiler.rs  cmd_compute.rs  cmd_crystal.rs  cmd_media.rs  cmd_pdf.rs  cmd_search.rs  cmd_study.rs  cmd_symmetry.rs  cmd_tree.rs  cmd_vault.rs  cmd_vault_entries.rs
src-tauri/src/crystal/: miller.rs  mod.rs  parse.rs  supercell.rs  types.rs
src-tauri/src/db/: common.rs  embeddings.rs  graph.rs  lifecycle.rs  notes.rs  parsing.rs  relations.rs  schema.rs  study.rs
src-tauri/src/db/study/: session.rs  stats.rs  truth.rs
src-tauri/src/pdf/: annotations.rs  cache.rs  engine.rs  ink.rs  mod.rs  renderer.rs  search.rs  text.rs
src-tauri/src/services/: mod.rs  spectroscopy.rs
src-tauri/src/shared/: command_utils.rs  mod.rs
src-tauri/src/symmetry/: classify.rs  elements.rs  geometry.rs  mod.rs  parse.rs  render.rs  search.rs  types.rs
src-tauri/src/symmetry/parse/: cif.rs  mod.rs  pdb.rs  xyz.rs
src-tauri/src/watcher/: filter.rs  handler.rs  mod.rs
src/components/: AIAssistantSidebar.tsx  ActivityBar.tsx  CanvasEditor.tsx  CrystalViewer3D.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  (+20 more)
(+167 files in other folders)
